fix: tap bg on iOS/iPadOS

--- a/src/styles/styles-notes.css
+++ b/src/styles/styles-notes.css
@@ -1,3 +1,13 @@
 a.extlink {
     @apply text-lime-400 hover:text-lime-500 underline underline-offset-4;
 }
+
+/**
+ * iOS/iPadOS Safari stupidly changes the background color of links on tap.
+ * This property, as well as the ontouchstart="" attribute on `NoteListCard`, 
+ * disables the weird gray tint. The card should now be correctly white
+ * on click.
+ */
+a {
+    -webkit-tap-highlight-color: transparent;
+}
